# tools-apaka-rock_patches

./: README.md  manifest.xml
backports/: backports.gemspec
backports/lib/backports/: version.rb
bagel/bagel_gui/src/: ModelInterface.hpp  NodeLoader.h
bagel/gui_task_model/src/: BaseGraphModel.hpp
bagel/osg_graph_viz/: osg_graph_viz.pc.in
base/cmake/modules/: FindGem.cmake  FindSISL.cmake
base/scripts/debian/: install
concurrent-ruby-ext/debian/: control
concurrent-ruby-ext/ext/concurrent/: ruby_193_compatible.h
control/ruby_sdformat/: Rakefile
control/sdformat/: CMakeLists.txt
control/sdformat/src/: CMakeLists.txt
d-rock/orogen/head_demo_control/tasks/: Task.cpp
debug-inspector/ext/debug_inspector/: extconf.rb
drivers/camera_prosilica/: CMakeLists.txt
drivers/orogen/kinect/: kinect.orogen
dry-logic/: apaka.control
gem2deb/: README
gem2deb/bionic-all/: gem2deb-test-runner_0.38.1_amd64.deb  gem2deb-test-runner_0.38.1_arm64.deb  gem2deb-test-runner_0.38.1_armel.deb  gem2deb-test-runner_0.38.1_armhf.deb  gem2deb-test-runner_0.38.1_i386.deb  gem2deb-test-runner_0.43_amd64.deb  gem2deb-test-runner_0.43_arm64.deb  gem2deb-test-runner_0.43_armel.deb  gem2deb-test-runner_0.43_armhf.deb  gem2deb-test-runner_0.43_i386.deb  gem2deb_0.38.1_amd64.deb  gem2deb_0.38.1_arm64.deb  gem2deb_0.38.1_armel.deb  gem2deb_0.38.1_armhf.deb  gem2deb_0.38.1_i386.deb  gem2deb_0.43_amd64.deb  gem2deb_0.43_arm64.deb  gem2deb_0.43_armel.deb  gem2deb_0.43_armhf.deb  gem2deb_0.43_i386.deb
gem2deb/jessie-all/: gem2deb-test-runner_0.10_all.deb  gem2deb_0.10.dsc  gem2deb_0.10.tar.xz  gem2deb_0.10_all.deb  gem2deb_0.10_amd64.changes  gem2deb_0.10_armhf.changes
gem2deb/stretch-all/: gem2deb-test-runner_0.33.1_amd64.deb  gem2deb-test-runner_0.33.1_arm64.deb  gem2deb-test-runner_0.33.1_armel.deb  gem2deb-test-runner_0.33.1_armhf.deb  gem2deb-test-runner_0.33.1_i386.deb  gem2deb-test-runner_0.37~bpo9+2_amd64.deb  gem2deb-test-runner_0.37~bpo9+2_arm64.deb  gem2deb-test-runner_0.37~bpo9+2_armel.deb  gem2deb-test-runner_0.37~bpo9+2_armhf.deb  gem2deb-test-runner_0.37~bpo9+2_i386.deb  gem2deb_0.33.1.dsc  gem2deb_0.33.1.tar.xz  gem2deb_0.33.1_amd64.buildinfo  gem2deb_0.33.1_amd64.changes  gem2deb_0.33.1_amd64.deb  gem2deb_0.33.1_arm64.deb  gem2deb_0.33.1_armel.deb  gem2deb_0.33.1_armhf.deb  gem2deb_0.33.1_i386.deb  gem2deb_0.37~bpo9+2_amd64.deb  gem2deb_0.37~bpo9+2_arm64.deb  gem2deb_0.37~bpo9+2_armel.deb  gem2deb_0.37~bpo9+2_armhf.deb  gem2deb_0.37~bpo9+2_i386.deb
gem2deb/trusty-all/: gem2deb_0.6.1.dsc  gem2deb_0.6.1_all.deb  gem2deb_0.6.1_amd64.changes
gem2deb/xenial-all/: gem2deb-test-runner_0.31_amd64.deb  gem2deb-test-runner_0.31_arm64.deb  gem2deb-test-runner_0.31_armel.deb  gem2deb-test-runner_0.31_armhf.deb  gem2deb-test-runner_0.31_i386.deb  gem2deb_0.31.dsc  gem2deb_0.31.tar.xz  gem2deb_0.31_amd64.changes  gem2deb_0.31_amd64.deb  gem2deb_0.31_arm64.deb  gem2deb_0.31_armel.deb  gem2deb_0.31_armhf.deb  gem2deb_0.31_i386.deb
gems/: README
gems/concurrent-ruby/: concurrent-ruby-0.9.1.gem  concurrent-ruby-1.0.2.gem  concurrent-ruby-1.0.4.gem  concurrent-ruby-1.0.5.gem  concurrent-ruby-1.1.10.gem  concurrent-ruby-1.1.5.gem  concurrent-ruby-1.1.9.gem
gems/concurrent-ruby-ext/: concurrent-ruby-ext-0.9.1.gem  concurrent-ruby-ext-1.0.2.gem  concurrent-ruby-ext-1.0.4.gem  concurrent-ruby-ext-1.0.5.gem  concurrent-ruby-ext-1.1.10.gem  concurrent-ruby-ext-1.1.5.gem  concurrent-ruby-ext-1.1.9.gem
gems/qtbindings/: qtbindings-4.8.6.5.gem
grape/: grape.gemspec
gui-vizkit/ext/vizkittypelib/: CMakeLists.txt
gui/pose3d_editor/: manifest.xml
gui/rock-display/: manifest.xml
gui/rock_replay/src/: CMakeLists.txt
gui/vizkit/ext/vizkittypelib/: CMakeLists.txt
gui/vizkit/lib/vizkit/: vizkit_items.rb
mustermann/lib/mustermann/: version.rb
nokogiri/debian/: control  rules
orogen/debian/: install  package.postinst  postinst
planning/orogen/motion_planning_libraries/tasks/: Test.cpp
qtbindings/: extconf.rb
qtbindings/debian/: control  rules
rest-client/: apaka.control
rice/: Rakefile
rice/debian/: install
rice/pkgconfig/: rice.pc
rock-qtbindings/debian/: control
rtt/: apaka.control
rtt/rtt/: rtt-config.h.in
ruby2_keywords/: ruby2_keywords.gemspec
simulation/mars/app/: apaka.control
simulation/orogen/mars/tasks/: IMU.hpp
slam/envire/: CMakeLists.txt
slam/envire/src/: CMakeLists.txt
slam/octomap/octovis/: CMakeLists.txt  CMakeLists_src.txt
slam/octomap/octovis/include/octovis/: SelectionBox.h  ViewerWidget.h
slam/octomap/octovis/src/: OcTreeDrawer.cpp  SelectionBox.cpp  ViewerWidget.cpp
state_machine/: state_machine.gemspec
stream/debian/: control
strings-ansi/: apaka.control
strings/debian/: control
tools/class_loader/src/: class_loader.pc.in
tools/cnd/execution/src/old/: CMakeLists.txt
tools/cnd/service/launcher/src/: CMakeLists.txt
tools/gecode/debian/: install
tools/gecode/lib/pkgconfig/: gecode.pc
tools/metaruby/: metaruby.gemspec
tools/orocos.rb/: orocos.rb.gemspec
tools/roby/: roby.gemspec
tools/rubigen/: rubigen.gemspec
typelib/bindings/ruby/lib/typelib/: gccxml.rb
utilrb/: utilrb.gemspec
wisper/: apaka.control
yard/debian/: control
